# coursework

./: pyproject.toml  requirements.txt
class_payment/: payment.py
programs/: main.py
scr/: utils.py
tests/: main_test.py  utils_test.py
