[tool.poetry]
name = "coursework"
version = "0.1.0"
description = ""
authors = ["Kirill Aliyev <kirill.linas@gmail.com>"]
readme = "README.md"
packages = [{include = "programs"},]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
show-pays = "programs.main:main"
